# cpp-simple-vector

./: CMakeLists.txt  array_ptr.h  main.cpp  simple_vector.h  tests.h
simple-vector/: array_ptr.h  main.cpp  simple_vector.h
